added the timer, highlighting on the race menu. Attempted to sort out logining in in the backend

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -46,7 +46,7 @@ target:
 # default rules
 homepage:
   url:   /
-  param: { module: people, action: index }
+  param: { module: present, action: race }
 
 # generic rules
 # please, remove them by adding more specific rules
