working on charts and sounds for race, ogg

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -5,6 +5,10 @@ stats:
   url:   /stats
   param: { module: present, action: stats }
 
+chart_data:
+  url:   /chart_data
+  param: { module: present, action: chartData }
+
 race:
   url:   /race
   param: { module: present, action: race }
