added mustache, decent version of monthly sales figures with column chart. Found how to end the race, and display. Need to connect to db the sales page. and display results of the race

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -5,6 +5,10 @@ stats:
   url:   /stats
   param: { module: present, action: stats }
 
+monthly_stats:
+  url:   /monthly_stats
+  param: { module: present, action: monthlyStats }
+
 chart_data:
   url:   /chart_data
   param: { module: present, action: chartData }
