--- a/apps/frontend/modules/present/config/view.yml
+++ b/apps/frontend/modules/present/config/view.yml
@@ -2,8 +2,13 @@ raceSuccess:
   has_layout: false
 
 
+
 statsSuccess:
   has_layout: false
 
 raceJSONSuccess:
+  has_layout: false
+
+
+monthlyRegionalStatsSuccess:
   has_layout: false
